fix(chart): hide overflow in charts to avoid scrollbars flickering (#181)
related to OPT-1823

--- a/client/src/modules/components/ReportView/views/Chart/Chart.scss
+++ b/client/src/modules/components/ReportView/views/Chart/Chart.scss
@@ -2,4 +2,5 @@
   flex-grow: 1;
   flex-shrink: 1;
   max-height: 100%;
+  overflow: hidden;
 }
